# CoreModulesQt

./: CMakeLists.txt  main.cpp
